2nd attempt at fixing the css text overflow bug

--- a/static/css/base.css
+++ b/static/css/base.css
@@ -37,8 +37,7 @@ body{
 }
 
 #photo-box {
-	overflow: scroll;
-	overflow-y: scroll;
+	overflow: auto;
 	float:left;
 	margin:10px auto;
 	display:block;
